--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
     <![endif]-->
   </head>
 
-  <body class="galerija">
+  <body class="kontakt">
 		<!-- Navigacija -->
   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
