--- a/index.html
+++ b/index.html
@@ -1,98 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Web stranica firme FORVIT d.o.o. Gracanica / TOV PERADI">
-    <meta name="author" content="Sefer Kuduzovic">
-    <link rel="icon" href="img/icon.png">
-
-    <title>FORVIT d.o.o.</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Play:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body class="home">
-		<!-- Navigacija -->
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Navigacija</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-		  <a href="https://www.facebook.com/forvit/" title="Facebook Stranica" target="_blank" alt="">
-		  <img src="img/fbicon.png"></img></a>
-          <a class="navbar-brand" href="https://www.facebook.com/forvit/" target="_blank">Facebook</a>
+    
+    <head>
+        <meta charset=utf-8>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>FORVIT d.o.o.</title>
+        <!-- Load Roboto font -->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <!-- Load css styles -->
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/pluton.css" />
+        <!--[if IE 7]>
+            <link rel="stylesheet" type="text/css" href="css/pluton-ie7.css" />
+        <![endif]-->
+        <link rel="stylesheet" type="text/css" href="css/jquery.cslider.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css" />
+        <link rel="stylesheet" type="text/css" href="css/animate.css" />
+        <!-- Fav and touch icons -->
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72.png">
+        <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57.png">
+        <link rel="shortcut icon" href="images/ico/favicon.ico">
+    </head>
+    
+    <body>
+        <div class="navbar">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a href="#" class="brand">
+                        <img src="images/logo.png" width="120" height="40" alt="Logo" />
+                        <!-- This is the website logo -->
+                    </a>
+                    <!-- Navigation button, visible on small resolution -->
+                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <i class="icon-menu"></i>
+                    </button>
+                    <!-- Main navigation -->
+                    <div class="nav-collapse collapse pull-right">
+                        <ul class="nav" id="top-navigation">
+                            <li class="active"><a href="#home">Početna</a></li>
+                            <li><a href="#service">Uzgoj</a></li>
+                            <li><a href="#about">O nama</a></li>
+                            <li><a href="#contact">Kontakt</a></li>
+                        </ul>
+                    </div>
+                    <!-- End main navigation -->
+                </div>
+            </div>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a class="current" href="index.html">Početna</a></li>
-			<li><a href="galerija.html">Galerija</a></li>
-            <li><a href="onama.html">O nama</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <!-- Glavni jumbotron - top -->
-    <div class="jumbotron">
-      <div class="container">
-		<h1 class="farma">Farma peradi Gračanica</h1>
-      </div>
-    </div>
-    <div class="container">
-      <!-- Features -->
-      <div class="row features">
-        <div class="col-md-4">
-		<img src="img/medalja.png" alt="">
-          <h2>Kvaliteta</h2>
-		  <p>Najkvalitetnije pileće meso</p>
+        <!-- Start home section -->
+        <div id="home">
+            <!-- Start cSlider -->
+            <div id="da-slider" class="da-slider">
+                <div class="triangle"></div>
+                <!-- mask elemet use for masking background image -->
+                <div class="mask"></div>
+                <!-- All slides centred in container element -->
+                <div class="container">
+                    <!-- Start first slide -->
+					<div class="da-slide">
+                        <h2>PORODIČNA FIRMA</h2>
+                        <h4>Tradicija preko decenije</h4>
+                        <p>Naša firma osnovana je prije 10 godina. Za to vrijeme je uloženo mnogo truda da bi bili ovdje gdje smo i ne planiramo da stanemo. Principi su i danas dan isti. PROVJERENO - SIGURNO - DOMAĆE</p>
+                        <div class="da-img">
+                            <img src="images/Slider02.png" width="320" alt="image02">
+                        </div>
+                    </div>
+                    <!-- End first slide -->
+                    <!-- Start second slide -->
+					<div class="da-slide">
+                        <h2 class="fittext2">PROVJERENA KVALITETA</h2>
+                        <h4>Pileće meso najbolje kvalitete</h4>
+                        <p>Striktna kontrola uslova života peradi omogućava uzgoj najkvalitetnijeg pilećeg mesa na tržištu. </p>
+                        <div class="da-img">
+                            <img src="images/Slider01.png" alt="image01" width="320">
+                        </div>
+                    </div>
+                    <!-- End second slide -->
+                    <!-- Start third slide -->
+                    <div class="da-slide">
+                        <h2>CIJENA</h2>
+                        <h4>Pristupačne cijene</h4>
+                        <p>Za naše kvalitetno meso ne morate da imate dubok džep!</p>
+                        <div class="da-img">
+                            <img src="images/Slider03.png" width="320" alt="image03">
+                        </div>
+                    </div>
+                    <!-- Start third slide -->
+                    <!-- Start cSlide navigation arrows -->
+                    <div class="da-arrows">
+                        <span class="da-arrows-prev"></span>
+                        <span class="da-arrows-next"></span>
+                    </div>
+                    <!-- End cSlide navigation arrows -->
+                </div>
+            </div>
         </div>
-        <div class="col-md-4">
-		<img src="img/srce.png" alt="">
-          <h2>Porodična firma</h2>
-		  <p>Tradicija koja postoji preko 10 godina</p>
-       </div>
-        <div class="col-md-4">
-		<img src="img/price.png" alt="">
-          <h2>Cijena</h2>
-		  <p>Pristupačna cijena za vrhunsku kvalitetu</p>
+        <!-- End home section -->
+        <!-- Service section start -->
+        <div class="section primary-section" id="service">
+            <div class="container">
+                <!-- Start title section -->
+                <div class="title">
+                    <h1>FORVIT d.o.o.</h1>
+                    <!-- Section's title goes here -->
+                </div>
+                <div class="row-fluid">
+                    <div class="span4">
+                        <div class="centered service">
+                            <div class="circle-border zoom-in">
+                                <img class="img-circle" src="images/Service1.png" alt="service 1">
+                            </div>
+                            <h3>Jaje</h3>
+                            <p>Početak našeg puta do gotovog proizvoda.</p>
+                        </div>
+                    </div>
+                    <div class="span4">
+                        <div class="centered service">
+                            <div class="circle-border zoom-in">
+                                <img class="img-circle" src="images/Service2.png" alt="service 2" />
+                            </div>
+                            <h3>Pile</h3>
+                            <p>Dobijamo piliće od par dana na našu farmu kada počinje njihov uzgoj.</p>
+                        </div>
+                    </div>
+                    <div class="span4">
+                        <div class="centered service">
+                            <div class="circle-border zoom-in">
+                                <img class="img-circle" src="images/Service3.png" alt="service 3">
+                            </div>
+                            <h3>Kokoš</h3>
+                            <p>Kada dostignu ovaj nivou, kokoši idu na dalju preradu u provjerenu klaonicu. Odatle direktno dolaze za Vaš stol.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-	  </div>
-		<br>
-		</br>
-	</div>
-	<div>
-      <footer>
-	  <p></p>
-        <p><strong>Copyright© 2016 FORVIT d.o.o. | Design & Host: Sefer Kuduzović</strong></p>
-      </footer>
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+        <!-- Service section end -->
+        <!-- About us section start -->
+        <div class="section primary-section" id="about">
+            <div class="triangle"></div>
+            <div class="container">
+                <div class="title">
+                    <h1>Ko smo mi?</h1>
+                    <p>Porodična firma osnovana 1996. godine. Naša farma se nalazi na magistralnom putu M4 Tuzla-Doboj u mjestu Stjepan Polje.</p>
+                </div>
+                <div class="row-fluid team">
+                    <div class="span4" id="first-person">
+                        <div class="thumbnail">
+                            <img src="images/Team1.png" alt="team 1">
+                        </div>
+                    </div>
+                    <div class="span4" id="second-person">
+                        <div class="thumbnail">
+                            <img src="images/Team2.png" alt="team 1">
+                        </div>
+                    </div>
+                    <div class="span4" id="third-person">
+                        <div class="thumbnail">
+                            <img src="images/Team3.png" alt="team 1">
+                        </div>
+                    </div>
+                </div>
+                <div class="about-text centered">
+                </div>
+				</div>
+        </div>
+        <!-- About us section end -->
+        <!-- Contact section start -->
+        <div id="contact" class="contact">
+            <div class="section secondary-section">
+                <div class="container">
+                    <div class="title">
+                        <h1>Kontaktiraj nas</h1>
+                    </div>
+                </div>
+                <div class="map-wrapper">
+                    <div class="map-canvas" id="map-canvas">Mapa se učitava</div>
+                    <div class="container">
+                        <div class="row-fluid">
+                            <div class="span5 contact-form centered">
+                                <h3>Zdravo!</h3>
+                                <div id="successSend" class="alert alert-success invisible">
+                                    <strong>Bravo</strong>Vaša poruka je poslana!</div>
+                                <div id="errorSend" class="alert alert-error invisible">Greška!</div>
+                                <form id="contact-form" action="php/mail.php">
+                                    <div class="control-group">
+                                        <div class="controls">
+                                            <input class="span12" type="text" id="name" name="name" placeholder="Ime" />
+                                            <div class="error left-align" id="err-name">Unesite ime</div>
+                                        </div>
+                                    </div>
+                                    <div class="control-group">
+                                        <div class="controls">
+                                            <input class="span12" type="email" name="email" id="email" placeholder="Email" />
+                                            <div class="error left-align" id="err-email">Unesite validnu e-mail adresu</div>
+                                        </div>
+                                    </div>
+                                    <div class="control-group">
+                                        <div class="controls">
+                                            <textarea class="span12" name="comment" id="comment" placeholder="Komentar"></textarea>
+                                            <div class="error left-align" id="err-comment">Unesite Vaš komentar</div>
+                                        </div>
+                                    </div>
+                                    <div class="control-group">
+                                        <div class="controls">
+                                            <button id="send-mail" class="message-btn">Pošalji</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="span9 center contact-info">
+                        <p>Gračanički skver br.5, 75320, Gračanica</p>
+                        <p class="info-mail">forvit.gracanica@gmail.com</p>
+                        <p>+387 35 703 410 (Telefon)</p>
+                        <p>+387 35 703 411 (Faks)</p>
+                        <div class="title">
+                            <h3>Facebook stranica</h3>
+                        </div>
+                    </div>
+                    <div class="row-fluid centered">
+                        <ul class="social centered">
+                            <li>
+                                <a href="https://www.facebook.com/forvit/?fref=ts">
+                                    <span class="icon-facebook-circled"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Contact section edn -->
+        <!-- Footer section start -->
+        <div class="footer">
+            <p>&copy; 2016 FORVIT d.o.o. / Design & Development: Sefer Kuduzović</p>
+        </div>
+        <!-- Footer section end -->
+        <!-- ScrollUp button start -->
+        <div class="scrollup">
+            <a href="#">
+                <i class="icon-up-open"></i>
+            </a>
+        </div>
+        <!-- ScrollUp button end -->
+        <!-- Include javascript -->
+        <script src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.mixitup.js"></script>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
+        <script type="text/javascript" src="js/modernizr.custom.js"></script>
+        <script type="text/javascript" src="js/jquery.bxslider.js"></script>
+        <script type="text/javascript" src="js/jquery.cslider.js"></script>
+        <script type="text/javascript" src="js/jquery.placeholder.js"></script>
+        <script type="text/javascript" src="js/jquery.inview.js"></script>
+        <script async="" defer="" type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=initializeMap"></script>
+        <!-- css3-mediaqueries.js for IE8 or older -->
+        <!--[if lt IE 9]>
+            <script src="js/respond.min.js"></script>
+        <![endif]-->
+        <script type="text/javascript" src="js/app.js"></script>
+    </body>
 </html>
